# LLM-fine-tuning

./: .gitignore  CONTRIBUTING.rst  README.md  mkdocs.yml  pyproject.toml  tox.ini
.devcontainer/: devcontainer.json
docs/: index.md
src/: fine_tuning.py
tests/: test_fine_tuning.py
